@@ -15,6 +15,8 @@ PHP                                                                        NEWS
 
 - Reflection:
   . Fixed bug #70650 (Wrong docblock assignment). (Marcio)
+  . Fixed bug #70674 (ReflectionFunction::getClosure() leaks memory when used
+    for internal functions). (Dmitry, Bob)
 
 - Standard:
   . Fixed bug #70667 (strtr() causes invalid writes and a crashes). (Dmitry)
